[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logiclib"
version = "0.0.1post4"
authors = [
  { name="Edward Ji", email="jiziao6@gmail.com" },
]
description = "A Python library for first-order logic"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Edward-Ji/LogicLib"
"Bug Tracker" = "https://github.com/Edward-Ji/LogicLib/issues"
